# lategit

./: CMakeLists.txt  README.md  autobuild.sh  mark.md
example/: user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: mprpcapplication.h  mprpcchannel.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out
test/protobuf/2/: test.proto
test/protobuf/3+4/: main.cc  test.pb.cc  test.pb.h  test.proto
